ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
spec:
  rules:
  - host: pykube.foo
  - http:
      paths:
      - path: /pykube
        backend:
          serviceName: pykube-service
          servicePort: 80
  - host: gokube.foo
  - http:
      paths:
      - path: /gokube/getdata
        backend:
          serviceName: gokube-service
          servicePort: 80
      - path: /gokube/ping
        backend:
          serviceName: gokube-service
          servicePort: 80
      - path: /gokube/whoami
        backend:
          serviceName: gokube-service
          servicePort: 80
